components/policies/base/kubearchive/bootstrap-namespace/kyverno-manage-cluster-role.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno-manage-kubearchiveconfig
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
rules:
- apiGroups:
  - kubearchive.org
  resources:
  - kubearchiveconfigs
  verbs:
  - create
  - get
  - list
  - delete
  - update
